# bip322

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  nightly_version
.github/workflows/: ci.yaml  static.yaml
contrib/: crates.sh  test_vars.sh  wasm.sh
examples/: simple_sign_verify.rs
src/: error.rs  lib.rs  sign.rs  util.rs  verifier.rs  verify.rs
www/: CNAME  Cargo.toml  bip322.js  bip322_bg.wasm  index.css  index.html  index.js  justfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts  www.js  www_bg.wasm
www/src/: App.tsx  bip322.d.ts  bip322.js  bip322_bg.wasm  index.css  index.html  lib.rs  main.tsx
www/src/components/: AnimatedContainer.tsx  ConnectWallet.tsx  FormWrapper.tsx  SignMessage.tsx  TooltipWrapper.tsx  VerifyForm.tsx
www/src/components/ui/: base-button.tsx  base-input.tsx  base-textarea.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx  tooltip.tsx
www/src/hooks/: useSignMessage.ts  useVerifyMessage.ts  useWalletConnection.ts  useWasmInit.ts
www/src/wasm/: bip322.d.ts  bip322_bg.wasm  bip322_bg.wasm.d.ts  index.ts  package.json
www/verify/: Cargo.toml
www/www/: Cargo.toml
