[package]
name = "bip322"
version = "0.0.5"
edition = "2021"
description = "Implements BIP322 generic message signing"
license = "CC0-1.0"
homepage = "https://bip322.rs"
repository = "https://github.com/raphjaph/bip322"

[dependencies]
base64 = "0.22.1"
bitcoin = { version =  "0.31.2" }
bitcoin_hashes = "0.14.0"
hex = "0.4.3"
miniscript = "11.0.0"
snafu = "0.8.4"

[dev-dependencies]
pretty_assertions = "1.4.0"
