[package]
name = "bip322"
version = "0.0.9"
edition = "2021"
description = "Implements BIP322 generic message signing and verification"
license = "CC0-1.0"
homepage = "https://bip322.rs"
repository = "https://github.com/rust-bitcoin/bip322"
rust-version = "1.63"

[features]
default = []

[dependencies]
base64 = "0.22.1"
bitcoin = "0.32.5"
sha2 = "0.10.8"
snafu = { version =  "0.8.5", default-features = false, features = ["rust_1_61", "std"] }

[dev-dependencies]
hex = "0.4.3"
pretty_assertions = "1.4.1"
rand = "0.9.0"
