[package]
name = "www"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bip322 = { version = "0.0.9", path = "../" }
wasm-bindgen = "0.2.95"

[patch.crates-io]
bip322 = { path = '../' }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
